--- a/statics/css/detail.css
+++ b/statics/css/detail.css
@@ -1234,7 +1234,10 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .col-xs-4 img {
-	vertical-align: middle
+	vertical-align: middle;
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .album-thumb [class*='col-'] {
